[bumpversion]
current_version = 0.2.0
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\.*(?P<release>.*)
serialize = 
	{major}.{minor}.{patch}.{release}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = gamma
values = 
	alpha
	beta
	gamma

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:spartans/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[metadata]
description-file = README.rst
